@@ -1,3 +1,9 @@
+2012-09-04  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-internal.lisp (show-all-children): Hide only children
+	hidden by normal windows or frames (but not :dialog,
+	:transient...).
+
 2012-08-31  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/xlib-util.lisp (with-xlib-protect): Handle all Xlib errors
